CLEAN CODE AND FUNCTIONAL !!!
Refactor dialog views and controllers for improved readability and functionality